# plugin-manager

./: .gitignore  CMakeLists.txt  README.md  build.ps1
.github/workflows/: release.yml
installer/: installer.iss
src/: auth.c  auth.h  compat.h  debug-log.h  downloader.c  downloader.h  dstr-compat.h  manager-dialog.cpp  manager-dialog.hpp  oauth.c  oauth.h  obfuscation.cpp  obfuscation.h  plugin-main.c
